--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -227,6 +227,7 @@
 	}
 	.pg-head-wrap{
 		padding:5px 0 65px 0;
+		min-height:135px;
 	}
 	.pg-404 .pg-head-wrap{
 		padding:5px 0;
